--- a/app/src/main/res/layout-v3/tab_fragment_1.xml
+++ b/app/src/main/res/layout-v3/tab_fragment_1.xml
@@ -44,7 +44,8 @@
             android:layout_marginEnd="7dp"
             android:layout_marginStart="14dp"
             android:layout_marginTop="12dp"
-            android:clickable="true">
+            android:clickable="true"
+            android:visibility="invisible">
 
             <TextView
                 android:id="@+id/toggle_all_overlays_text"
@@ -100,6 +101,39 @@
                 android:scrollbars="vertical"/>
 
         </android.support.v4.widget.SwipeRefreshLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:id="@+id/error_loading_pack"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/sad_emoji"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="30dp"
+                    android:src="@drawable/no_themes_installed"/>
+
+                <TextView
+                    android:id="@+id/error_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/sad_emoji"
+                    android:layout_margin="15dp"
+                    android:gravity="center"
+                    android:text="@string/no_themes_installed"
+                    android:textColor="@color/main_screen_card_theme_title"
+                    android:textSize="20sp"
+                    android:textStyle="italic"/>
+
+            </RelativeLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
     </RelativeLayout>
 
