Arrays: Update Slovak Translation Title

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -41,7 +41,7 @@
         <item>Tradução Português (Brasileiro)</item>
         <item>Tradução Português</item>
         <item>Русский перевод</item>
-        <item>Slovenským prekladom</item>
+        <item>Slovenský preklad</item>
         <item>Traducciones españolas</item>
     </string-array>
 
